--- a/my_web/templates/my_web/base.html
+++ b/my_web/templates/my_web/base.html
@@ -65,7 +65,7 @@
         </div>
     </div>
     <div class="menu_box" style="display: none;">
-        <a href="{% url 'index_page' %}" >
+        <a href="{% url 'index_page' %}">
             <div class="menu_item menu_item_first">
                 <label>Главная</label>
                 <div class="icon_container">
@@ -73,7 +73,7 @@
                 </div>
             </div>
         </a>
-        <a href="{% url 'news_page' %}" >
+        <a href="{% url 'news_page' %}">
             <div class="menu_item">
                 <label>Новости</label>
                 <div class="icon_container">
@@ -81,7 +81,7 @@
                 </div>
             </div>
         </a>
-        <a href="{% url 'namaz_page' %}" >
+        <a href="{% url 'namaz_page' %}">
             <div class="menu_item">
                 <label>Намаз</label>
                 <div class="icon_container">
@@ -97,7 +97,7 @@
                 </div>
             </div>
         </a>
-        <a href="{% url 'bot_page' %}" >
+        <a href="{% url 'bot_page' %}">
             <div class="menu_item">
                 <label>Бот</label>
                 <div class="icon_container">
@@ -105,11 +105,19 @@
                 </div>
             </div>
         </a>
-        <a href="{% url 'info_page' %}" >
+        <a href="{% url 'info_page' %}">
             <div class="menu_item menu_item_last">
                 <label>Информация</label>
                 <div class="icon_container">
                     <i class="fas fa-info"></i>
+                </div>
+            </div>
+        </a>
+        <a href="{% url 'admin_panel_link' %}">
+            <div class="menu_item menu_item_last">
+                <label>Admin</label>
+                <div class="icon_container">
+                    <i class="fas fa-user-shield"></i>
                 </div>
             </div>
         </a>
