--- a/my_web/templates/my_web/base.html
+++ b/my_web/templates/my_web/base.html
@@ -106,7 +106,7 @@
             </div>
         </a>
         <a href="{% url 'info_page' %}">
-            <div class="menu_item menu_item_last">
+            <div class="menu_item">
                 <label>Информация</label>
                 <div class="icon_container">
                     <i class="fas fa-info"></i>
