update status page

--- a/my_web/templates/my_web/status.html
+++ b/my_web/templates/my_web/status.html
@@ -26,7 +26,7 @@ AWARE
             <div class="user box aos-init aos-animate" data-aos="fade-up">
                 <div style="float: left; ">
 
-                    <label class="username">Доступность QWriter</label><br>
+                    <label class="username">Доступность AWARE</label><br>
                     <label class="city">
                         <i>За последние сутки: <b>{{ status.days1 }}%</b></i><br/>
                         <i>За последние 7 дней: <b>{{ status.days7 }}%</b></i><br/>
