--- a/my_web/templates/my_web/base.html
+++ b/my_web/templates/my_web/base.html
@@ -113,7 +113,7 @@
                 </div>
             </div>
         </a>
-        <a href="admin">
+        <a href="/admin">
             <div class="menu_item menu_item_last">
                 <label>Admin</label>
                 <div class="icon_container">
