base template simply update

--- a/my_web/templates/my_web/base.html
+++ b/my_web/templates/my_web/base.html
@@ -7,7 +7,7 @@
         <meta name="apple-mobile-web-app-status-bar-style" content="black" />
         <meta name="og:description" content="{% block og_desc %}{% endblock %}">
         <meta name="og:url" content="https://awse.us{% block url_path %}{% endblock %}">
-        <meta name="og:site_name" content="Q-Writer">
+        <meta name="og:site_name" content="AWARE">
         <meta name="og:locale" content="ru_RU">
         <meta name="theme-color" content="#202124">
         <meta name="og:type" content="website">
