--- a/my_web/templates/my_web/info.html
+++ b/my_web/templates/my_web/info.html
@@ -28,10 +28,7 @@ AWARE
 
                 <label class="username">Информация</label><br>
                 <label class="city">
-                    <i>Ресурс для просмотра историй, различных цитат и фактов, есть даже новости. </i>
-                    <b>Их можно смотреть одним нажатием кнопки. Но обо всем по порядку. Понятно, что для хорошего рассказа этого недостаточно.</b>
-                    <i> Но не смотря на столь скромный размер</i>
-                    <b> я, как ты уже заметила, занимаюсь довольно серьезной темой. У меня совершенно новая концепция рождения жанра.</b>
+                    Давайте мы вам расскажем о нашем проекте AWARE, он<strong> не из популярных и по финансовым причинам не привлекает широкого внимания.</strong> Но<strong> это наш сайт, который обслуживает клиентов из других городов.</strong> Мы поможем найти почти всё что угодно<strong> – бизнес, который вы захотите сменить, любимое кино, музыка, книги и даже одежды.</strong> Также есть калькулятор, просто напишите уравнение в строку поиска<strong>, и по нему ваше поисковое приложение сможет на досуге сделать всё остальное. Это своего рода бесплатно.</strong> Не забыли также о новостях<strong>, которые поднимают настроение. Наш сайт включает новости о ядерной энергии, кризисе в Америке и секретном оружии. Чем больше информации вы ищете в интернете, тем сильнее у вас оптимизм.</strong> Есть возможно посмотреть время Намаза<strong> за рубежом. Ещё вы сможете узнать что-нибудь о своей безопасности. Например, насколько реально совершить уголовное преступление на территории России. Поэтому давайте попробуем.</strong> Также вы можете обращаться к владельцу ресурса, Наджибулло, он с радостью<strong> расскажет обо всех наших услугах. Пока вы набираете текст, я расскажу о нашем алгоритме. У каждого из нас есть сайты, на которых мы размещаем информацию. На одном из них вы можете найти ссылку на этот сайт.</strong> И самое главное, не забывайте что наш сервер<strong> ничего не знает о ваших желаниях, он даже не знает о существовании этого сайта.</strong>
                     <br/><br/>
                     <b>Спасибо <a href="https://porfirevich.ru/">Порфировичу</a> за помощь с этим текстом. (Текст <a href="https://porfirevich.ru/">Порфировича</a> выделен жирным шрифтом)</b>
                 </label><br/>
