Info page edit meta description

--- a/my_web/templates/my_web/info.html
+++ b/my_web/templates/my_web/info.html
@@ -9,11 +9,11 @@ AWARE
 {% endblock %}
 
 {% block og_desc %}
-Здесь должна быть очень важная информация о том, в каком виде способны быть разрушены наши поля, в том виде, в каком они есть сейчас, или в таком, который мы хотим.
+Давайте мы вам расскажем о нашем проекте AWARE, он не из популярных и по финансовым причинам не привлекает широкого внимания. Но это наш сайт, который обслуживает клиентов из других городов. Мы поможем найти почти всё что угодно – бизнес, который вы захотите сменить, любимое кино, музыка, книги и даже одежды. Также есть калькулятор, просто напишите уравнение в строку поиска, и по нему ваше поисковое приложение сможет на досуге сделать всё остальное. Это своего рода бесплатно. Не забыли также о новостях, которые поднимают настроение. Наш сайт включает новости о ядерной энергии, кризисе в Америке и секретном оружии. Чем больше информации...
 {% endblock %}
 
 {% block twitter_desc %}
-Здесь должна быть очень важная информация о том, в каком виде способны быть разрушены наши поля, в том виде, в каком они есть сейчас, или в таком, который мы хотим.
+Давайте мы вам расскажем о нашем проекте AWARE, он не из популярных и по финансовым причинам не привлекает широкого внимания. Но это наш сайт, который обслуживает клиентов из других городов. Мы поможем найти почти всё что угодно – бизнес, который вы захотите сменить, любимое кино, музыка, книги и даже одежды. Также есть калькулятор, просто напишите уравнение в строку поиска, и по нему ваше поисковое приложение сможет на досуге сделать всё остальное. Это своего рода бесплатно. Не забыли также о новостях, которые поднимают настроение. Наш сайт включает новости о ядерной энергии, кризисе в Америке и секретном оружии. Чем больше информации...
 {% endblock %}
 
 {% block url_path %}
