Add CloudFlare statistics

--- a/my_web/templates/my_web/base.html
+++ b/my_web/templates/my_web/base.html
@@ -33,6 +33,7 @@
         <link href="{% static 'my_web/css/main_page.css' %}" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+        <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "d00efa59211d4353a71a1eb14723c167"}'></script>
         <title>{% block title %}{% endblock %}</title>
         <style>
             #h_butt {
