--- a/my_web/templates/my_web/namaz.html
+++ b/my_web/templates/my_web/namaz.html
@@ -1,7 +1,7 @@
 {% extends 'my_web/base.html' %}
 
 {% block title %}
-AWARE Search - Время намаза в разных городах
+AWARE Search - Время Намаза в разных городах
 {% endblock %}
 
 {% block title_header %}
@@ -9,11 +9,11 @@ AWARE Search
 {% endblock %}
 
 {% block og_desc %}
-Вы можете легко узнать время намаза в нужном вам городе
+Вы можете легко узнать время Намаза в нужном вам городе
 {% endblock %}
 
 {% block twitter_desc %}
-Вы можете легко узнать время намаза в нужном вам городе
+Вы можете легко узнать время Намаза в нужном вам городе
 {% endblock %}
 
 {% block public_re %}
