news feed template update

--- a/my_web/templates/my_web/news-feed.html
+++ b/my_web/templates/my_web/news-feed.html
@@ -27,7 +27,7 @@ AWARE
             <div class="user box aos-init aos-animate" data-aos="fade-up">
                 <div style="float: left;">
                     <label class="username">Информация</label><br>
-                    <label class="city"><i>Подождите, сейчас мы загрузим новостную ленту...</i><br><i>Этот не должно занять больше нескольких секунд.</i></label><br><br>
+                    <label class="city"><i>Подождите, сейчас мы загрузим новостную ленту...</i><br></label><br><br>
                     <a style="font-size: 12px;" href="{% url 'index_page' %}"><b>awse.us</b></a><br>
                 </div>
             </div>
