--- a/my_web/static/my_web/css/main_page.css
+++ b/my_web/static/my_web/css/main_page.css
@@ -8,9 +8,7 @@
         font-family: 'Open Sans', sans-serif;
         fill: #000000;
         font-size: 16px;
-        background: linear-gradient(90deg, #000, #777777, #777777, #000);
-        background-size: 400% 400%;
-        animation: gradient 15s ease infinite;
+        background: #191919;
     }
 
     @keyframes gradient {
