base template background change fix

--- a/my_web/templates/my_web/base.html
+++ b/my_web/templates/my_web/base.html
@@ -55,7 +55,7 @@
             }
         </style>
     </head>
-    <body id="topSite" data-aos-easing="ease" data-aos-duration="400" data-aos-delay="0">
+    <body id="topSite" data-aos-easing="ease" data-aos-duration="400" data-aos-delay="0" style="background: #191919;">
     <div class="container">
     <div class="map_search_box">
         <a href="#topSite" class="scroll-to menu_home" id="h_butt">
