namaz template fix

--- a/my_web/templates/my_web/load_more.html
+++ b/my_web/templates/my_web/load_more.html
@@ -77,7 +77,7 @@
                     <label class="username">Намаз на {{ el.time }}</label><br>
                     <label class="city">
                             {% for i in el.timings %}
-                                <p>{{ i }}</p>
+                                <p style="margin-top: -10%;">{{ i }}</p>
                             {% endfor %}
                     </label><br>
                     <br/><a style="font-size: 12px;" href="{% url 'index_page' %}"><b>awse.us</b></a><br>
