namaz template fix (title blocks)

--- a/my_web/templates/my_web/load_more.html
+++ b/my_web/templates/my_web/load_more.html
@@ -74,7 +74,7 @@
         <div class="col-12 col-lg-12 padding-block-center-box">
             <div class="user box aos-init aos-animate" data-aos="fade-up">
                 <div style="float: left;">
-                    <label class="username">Намаз на {{ el.time }}</label><br>
+                    <label style="margin-bottom: 10%;" class="username">Намаз на {{ el.time }}</label><br>
                     <label class="city">
                             {% for i in el.timings %}
                                 <p style="margin-top: -10%;">{{ i }}</p>
