--- a/my_web/templates/my_web/status.html
+++ b/my_web/templates/my_web/status.html
@@ -1,7 +1,7 @@
 {% extends 'my_web/base.html' %}
 
 {% block title %}
-AWARE Search - Статус и история доступности QWriter
+AWARE Search - Статус и история доступности AWARE
 {% endblock %}
 
 {% block title_header %}
@@ -9,11 +9,11 @@ AWARE
 {% endblock %}
 
 {% block og_desc %}
-Небольшая история из жизни проекта QWriter
+Небольшая история из жизни проекта AWARE
 {% endblock %}
 
 {% block twitter_desc %}
-Небольшая история из жизни проекта QWriter
+Небольшая история из жизни проекта AWARE
 {% endblock %}
 
 {% block url_path %}
