news feed button load margin set to 10 px

--- a/my_web/templates/my_web/news-feed.html
+++ b/my_web/templates/my_web/news-feed.html
@@ -32,7 +32,7 @@ AWARE
                 </div>
             </div>
         </div>
-        <br><button style="margin:0 auto;display:block;background-color:#121213;" class="btn btn-dark load-more-end-butt">{{ loading_button_text }}&nbsp;<span class="spinner-border spinner-border-sm" aria-hidden="true"></span></button>
+        <br><button style="margin:10px auto;display:block;background-color:#121213;" class="btn btn-dark load-more-end-butt">{{ loading_button_text }}&nbsp;<span class="spinner-border spinner-border-sm" aria-hidden="true"></span></button>
     </div>
 {% endblock %}
 
