--- a/my_web/templates/my_web/load_more.html
+++ b/my_web/templates/my_web/load_more.html
@@ -96,19 +96,24 @@
     {% endfor %}
 {% elif videos %}
     {% for el in videos %}
-<!--        <div class="col-12 col-lg-12 padding-block-center-box">-->
-<!--            <div class="user box aos-init aos-animate" data-aos="fade-up">-->
-<!--                <div style="float: left;">-->
-<!--                    <label style="margin-bottom: 10%;" class="username">Намаз на {{ el.time }}</label><br>-->
-<!--                    <label class="city">-->
-<!--                            {% for i in el.timings %}-->
-<!--                                <p style="margin-top: -10%;">{{ i }}</p>-->
-<!--                            {% endfor %}-->
-<!--                    </label><br>-->
-<!--                    <br/><a style="font-size: 12px;" href="{% url 'index_page' %}"><b>awse.us</b></a><br>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
+        <div class="col-12 col-lg-12 padding-block-center-box">
+            <div class="user box aos-init aos-animate" data-aos="fade-up">
+                <div style="float: left;">
+                    <label style="margin-bottom: 10%;" class="username"></label><br>
+                    <label class="city">
+                        <div clas="video_view_block_aware" style="margin-right: 20px;float: left;max-width: 100%;">
+                            <video width="100%" height="300" controls="controls">
+                                   <source src="{{ el.video.playAddr }}" type='video/mp4;'>
+                            </video>
+                        </div>
+                        <p>
+                            {{ el.desc }}
+                        </p>
+                    </label><br>
+                    <br/><a style="font-size: 12px;" href="{% url 'index_page' %}"><b>awse.us</b></a><br>
+                </div>
+            </div>
+        </div>
     {% endfor %}
 {% else %}
     {% for el in data %}
