--- a/my_web/templates/my_web/feed.html
+++ b/my_web/templates/my_web/feed.html
@@ -22,24 +22,30 @@ AWARE
 
 {% block content %}
 {% load static %}
-    <div class="row-posts-end">
-        <div class="col-12 col-lg-12 padding-block-center-box">
-            <div class="user box aos-init aos-animate" data-aos="fade-up">
-                <div style="float: left;">
-                    <label class="username">Случайная цитата</label><br>
-                    <label class="city"><i>„{{ add_.text }}“</i><br><br><b>{{ add_.author }}</b></label><br>
-                    <a style="font-size: 12px;" href="{% url 'index_page' %}"><b>awse.us</b></a><br>
+    <div style="display: block;margin-left: auto;margin-right: auto;border-radius: 20%;">
+        <div class="row-posts-end">
+            <div class="col-12 col-lg-12 padding-block-center-box">
+                <div class="user box aos-init aos-animate" data-aos="fade-up">
+                    <div style="float: left;">
+                        <label class="username">Случайная цитата</label><br>
+                        <label class="city"><i>„{{ add_.text }}“</i><br><br><b>{{ add_.author }}</b></label><br>
+                        <a style="font-size: 12px;" href="{% url 'index_page' %}"><b>awse.us</b></a><br>
+                    </div>
                 </div>
             </div>
+            <br><button style="margin:10px auto;display:block;background-color:#121213;" class="btn btn-dark load-more-end-butt">{{ loading_button_text }}&nbsp;<span class="spinner-border spinner-border-sm" aria-hidden="true"></span></button>
         </div>
-        <br><button style="margin:10px auto;display:block;background-color:#121213;" class="btn btn-dark load-more-end-butt">{{ loading_button_text }}&nbsp;<span class="spinner-border spinner-border-sm" aria-hidden="true"></span></button>
+        <button style="margin:0 auto;display:block;background-color:#121213;visibility: hidden;margin-bottom: 5%;" class="btn btn-dark load-more-end-butt-search-array">
+            Cледующее видео&nbsp;
+            <span class="spinner-border spinner-border-sm" aria-hidden="true"></span>
+        </button>
     </div>
 {% endblock %}
 
 {% block js_module %}
     {% csrf_token %}
     <script type="text/javascript">
-        if(window.location.search<2){function imgError(e){return e.onerror="",e.src="{% static 'my_web/images/background.png' %}",!0}function load_ajax_end_page(e){const o=$(".load-more-end-butt"),t=o.find("span");var n=jQuery("[name=csrfmiddlewaretoken]").val();grecaptcha.ready(function(){grecaptcha.execute("{{ token_re }}",{action:"submit"}).then(function(i){var a=i;$.ajax({url:"{% url 'load_more' %}",type:"POST",data:{csrfmiddlewaretoken:n,validtoken:"{{ token_valid }}",typeload:e,additions:0,news:0,gr_token:a,covid_stat:0,videos:1},beforeSend:function(){o.attr("disabled",!0),t.addClass("d-inline-block"),AOS.init()},success:function(e){$(".row-posts-end").empty(),o.attr("disabled",!1),t.removeClass("d-inline-block"),"Ошибка валидации!"==e?alert("Ошибка. Не удалось подтвердить запрос. Перезагрузите страницу."):$(".row-posts-end").append(e),AOS.init(),$(document).ready(function(){$('[data-toggle="tooltip"]').tooltip()}),$(".load-more-end-butt").remove()},error:function(){alert("Ошибка. Не удалось получить ответ от сервера. Попробуйте перезагрузить страницу."),o.attr("disabled",!1),t.removeClass("d-inline-block")}})})})}function onMenuClicked(){$(".menu_box").is(":hidden")?($(".menu_box").show(),$(".float_bg").show()):($(".menu_box").hide(),$(".float_bg").hide())}$(document).ready(function(){load_ajax_end_page("newsession")}),AOS.init(),$(document).ready(function(){$('[data-toggle="tooltip"]').tooltip()}),$("a.scroll-to").on("click",function(e){e.preventDefault();var o=$(this).attr("href");$("html, body").stop().animate({scrollTop:$(o).offset().top-60},900)}),$(window).scroll(function(){home_button=document.getElementById("h_butt"),1e3<$(window).scrollTop()?home_button.style.visibility="visible":home_button.style.visibility="hidden"}),$(document).on("click",function(e){$(e.target).hasClass("float_bg")&&($(".menu_box").hide(),$(".float_bg").hide())})}else{function onMenuClicked(){$(".menu_box").is(":hidden")?($(".menu_box").show(),$(".float_bg").show()):($(".menu_box").hide(),$(".float_bg").hide())}$(document).on("click",function(e){$(e.target).hasClass("float_bg")&&($(".menu_box").hide(),$(".float_bg").hide())})}
+        if(window.location.search<2){function imgError(e){return e.onerror="",e.src="{% static 'my_web/images/background.png' %}",!0}function load_ajax_end_page(e){const t=$(".load-more-end-butt"),o=t.find("span");var n=jQuery("[name=csrfmiddlewaretoken]").val();grecaptcha.ready(function(){grecaptcha.execute("{{ token_re }}",{action:"submit"}).then(function(i){var a=i;$.ajax({url:"{% url 'load_more' %}",type:"POST",data:{csrfmiddlewaretoken:n,validtoken:"{{ token_valid }}",typeload:e,additions:0,news:0,gr_token:a,covid_stat:0,videos:1},beforeSend:function(){t.attr("disabled",!0),o.addClass("d-inline-block"),AOS.init()},success:function(e){$(".row-posts-end").empty(),t.attr("disabled",!1),o.removeClass("d-inline-block"),"Ошибка валидации!"==e?alert("Ошибка. Не удалось подтвердить запрос. Перезагрузите страницу."):$(".row-posts-end").append(e),AOS.init(),$(document).ready(function(){$('[data-toggle="tooltip"]').tooltip()}),$(".load-more-end-butt").remove(),$(".load-more-end-butt-search-array").find("span").css("visibility","hidden"),$(".load-more-end-butt-search-array").css("visibility","visible")},error:function(){alert("Ошибка. Не удалось получить ответ от сервера. Попробуйте перезагрузить страницу."),t.attr("disabled",!1),o.removeClass("d-inline-block")}})})})}function load_continue_ajax_end_page(e,t){const o=$(".no-more-results-text"),n=$(".load-more-end-butt-search-array"),i=n.find("span");var a=jQuery("[name=csrfmiddlewaretoken]").val();grecaptcha.ready(function(){grecaptcha.execute("{{ token_re }}",{action:"submit"}).then(function(d){var s=d;$.ajax({url:"{% url 'load_more' %}",type:"POST",data:{csrfmiddlewaretoken:a,validtoken:"{{ token_valid }}",typeload:t,additions:0,news:0,gr_token:s,covid_stat:0,search:e,search_index_:search_index},beforeSend:function(){o.css("visibility","hidden"),n.attr("disabled",!0),i.addClass("d-inline-block"),i.css("visibility","visible"),AOS.init()},success:function(e){i.css("visibility","hidden"),n.attr("disabled",!1),i.removeClass("d-inline-block"),"Ошибка валидации!"==e?alert("Ошибка. Не удалось подтвердить запрос. Перезагрузите страницу."):$(".row-posts-end").append(e),AOS.init(),$(document).ready(function(){$('[data-toggle="tooltip"]').tooltip()})},error:function(){n.css("visibility","hidden"),n.attr("disabled",!1),i.css("visibility","hidden"),i.removeClass("d-inline-block")}})})})}function onMenuClicked(){$(".menu_box").is(":hidden")?($(".menu_box").show(),$(".float_bg").show()):($(".menu_box").hide(),$(".float_bg").hide())}$(document).ready(function(){load_ajax_end_page("newsession")}),AOS.init(),$(document).ready(function(){$('[data-toggle="tooltip"]').tooltip()}),$("a.scroll-to").on("click",function(e){e.preventDefault();var t=$(this).attr("href");$("html, body").stop().animate({scrollTop:$(t).offset().top-60},900)}),$(window).scroll(function(){home_button=document.getElementById("h_butt"),1e3<$(window).scrollTop()?home_button.style.visibility="visible":home_button.style.visibility="hidden"}),$(document).on("click",function(e){$(e.target).hasClass("float_bg")&&($(".menu_box").hide(),$(".float_bg").hide())})}else{function onMenuClicked(){$(".menu_box").is(":hidden")?($(".menu_box").show(),$(".float_bg").show()):($(".menu_box").hide(),$(".float_bg").hide())}$(document).on("click",function(e){$(e.target).hasClass("float_bg")&&($(".menu_box").hide(),$(".float_bg").hide())})}
     </script>
 {% endblock %}
 
