--- a/my_web/templates/my_web/base.html
+++ b/my_web/templates/my_web/base.html
@@ -88,14 +88,14 @@
                 </div>
             </div>
         </a>
-<!--        <a href="{% url 'feed_page' %}">-->
-<!--            <div class="menu_item">-->
-<!--                <label>Feed</label>-->
-<!--                <div class="icon_container">-->
-<!--                    <i class="fas fa-mug-hot"></i>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </a>-->
+        <a href="{% url 'feed_page' %}">
+            <div class="menu_item">
+                <label>Развлечения</label>
+                <div class="icon_container">
+                    <i class="fas fa-mug-hot"></i>
+                </div>
+            </div>
+        </a>
         <a href="{% url 'namaz_page' %}">
             <div class="menu_item">
                 <label>Намаз</label>
