error page update

--- a/my_web/templates/my_web/error.html
+++ b/my_web/templates/my_web/error.html
@@ -22,7 +22,7 @@ AWARE
             <div class="user box aos-init aos-animate" data-aos="fade-up">
                 <div style="float: left; ">
                     <label class="username">Очень креативная запись</label><br>
-                    <label class="city"><i title="Текст который написал не пользователь и не бот">Извини, запись не удалось получить, наверное это ошибка сервера, ну или твоя. Проверь пожалуйста адрес страницы. Информация о ошибке: </i><b>{{ exception }}</b><br><i><u>Опубликовано Сейчас (UTC)</u></i></label><br>
+                    <label class="city"><i title="Текст который написал не пользователь и не бот">Извини, запись не удалось получить, наверное это ошибка сервера, ну или твоя. Проверь пожалуйста адрес страницы. Информация об ошибке: </i><b>{{ exception }}</b><br><i><u>Опубликовано Сейчас (UTC)</u></i></label><br>
                     <a style="font-size: 12px;" href="{% url 'index_page' %}"><b>awse.us</b></a><br>
                 </div>
             </div>
