--- a/my_web/templates/my_web/base.html
+++ b/my_web/templates/my_web/base.html
@@ -88,11 +88,11 @@
                 </div>
             </div>
         </a>
-        <a href="{% url 'feed_page' %}">
+        <a href="{% url 'tiktok_page' %}">
             <div class="menu_item">
-                <label>Развлечения</label>
+                <label>TikTok</label>
                 <div class="icon_container">
-                    <i class="fas fa-mug-hot"></i>
+                    <i class="fab fa-tiktok"></i>
                 </div>
             </div>
         </a>
